feat: 会话隔离